--- a/src/components/Quest/Quest.scss
+++ b/src/components/Quest/Quest.scss
@@ -174,6 +174,8 @@ $inputRange-c5: #F7E91B;
     &:after {
       //content: "\2714";
       background-image: url("../../assets/svg/check.svg");
+      background-repeat: no-repeat;
+      background-position: 1px 2px;
       content: " ";
       position: absolute;
       font-size: 33px;
