--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -26,8 +26,6 @@
                     &:after {
                         content: " ";
                         background-image: url("../../assets/svg/check.svg");
-                        background-repeat: no-repeat;
-                        background-position: 1px 2px;
                         width: 30px;
                         height: 25px;
                     }
@@ -40,6 +38,7 @@
                 .ant-slider-handle {
                     &:after {
                         content: "?";
+                        background-image: none;
                     }
                 }
 
