next height fix for mobile

--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -39,6 +39,8 @@
                     &:after {
                         content: "?";
                         background-image: none;
+                        width: auto;
+                        height: auto;
                     }
                 }
 
