fix default value of inputRange-handler, change title to htmlTitle

--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -28,6 +28,7 @@
                         background-image: url("../../assets/svg/check.svg");
                         width: 30px;
                         height: 25px;
+                        background-size: 100%;
                     }
                 }
 
