--- a/src/components/Quest/Quest.scss
+++ b/src/components/Quest/Quest.scss
@@ -174,8 +174,7 @@ $inputRange-c5: #F7E91B;
     &:after {
       content: "?";
       background-image: url("../../assets/svg/check.svg");
-      width: 0;
-      height: 0;
+      background-size: 0px;
       background-repeat: no-repeat;
       background-position: 1px 2px;
       position: absolute;
