--- a/src/global.scss
+++ b/src/global.scss
@@ -323,6 +323,29 @@ button, a {
 
 }
 
+.allResultsPage {
+    padding: 15px 20px;
+
+    h1 {
+        text-transform: uppercase;
+        color: #474747;
+        font-size: 29px;
+        line-height: 32px;
+        font-weight: 800;
+        margin-bottom: 40px;
+    }
+
+    .allResultsListWrp {
+
+        margin: 15px 0;
+
+        .details {
+            padding-bottom: 10px;
+        }
+    }
+
+}
+
 @keyframes shake {
     10%, 90% {
         transform: translate3d(-1px, 0, 0);
