--- a/src/global.scss
+++ b/src/global.scss
@@ -346,15 +346,44 @@ button, a {
 }
 
 .compareResultsPage {
+
+    padding: 15px 20px;
+
+
+    h1 {
+        text-transform: uppercase;
+        color: #474747;
+        font-size: 29px;
+        line-height: 32px;
+        font-weight: 800;
+        margin-bottom: 40px;
+        text-align: center;
+    }
+
+
+    .compareResultsNames {
+
+        display: flex;
+
+        h2 {
+            color: #888;
+            width: 50%;
+            padding: 0 10px 0 0;
+            word-break: break-all;
+            &:last-of-type {
+                padding: 0 0 0 10px;
+                text-align: right;
+            }
+        }
+    }
+
     .compareResultsBlock {
         display: flex;
         .resultListWrp {
             width: 50%;
-            padding: 0 10px;
+            padding: 0 0 0 10px;
 
-            h2 {
-                text-align: right;
-            }
+
             .resultList {
                 li {
                     position: relative;
@@ -387,10 +416,8 @@ button, a {
             }
             
             &.rotated {
+                padding: 0 10px 0 0;
 
-                h2 {
-                    text-align: left;
-                }
                 .resultList {
                     li {
 
