--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -100,6 +100,19 @@
                     padding-left: 15px;
                     top: 1px;
                 }
+
+                &.SliderBtnNxt--IsChosen-true {
+                    background-color: #77AFA7;
+                    color: #fff;
+
+                    :global {
+                        #arrow_thin, #arrow_normal {
+                            path {
+                                fill: #fff;
+                            }
+                        }
+                    }
+                }
             }
 
 
