--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -4,7 +4,7 @@
     .MenuList {
         display: flex;
         margin: 0;
-        padding: 0;
+        padding: 0 20px;
 
         li {
             list-style: none;
