add new urlChekcker to helpers, rework url-comparing-code check-system, add new styles to compareBtn

--- a/src/global.scss
+++ b/src/global.scss
@@ -403,6 +403,12 @@ button, a {
 
             .compareBtn {
                 @include baseColorBtn();
+                &.badUrl {
+                    background-color: #ccc;
+                    color: #999;
+                    border-color: #777;
+                }
+
             }
         }
     }
