--- a/src/global.scss
+++ b/src/global.scss
@@ -595,7 +595,7 @@ button, a {
     .contactsPage__Container {
         height: 100%;
         display: flex;
-        flex-direction: column;hi
+        flex-direction: column;
         align-items: center;
         justify-content: flex-start;
         padding-bottom: 35px;
