--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -1,4 +1,4 @@
-.Menu {
+.MenuOLD {
     position: absolute;
     z-index: 1;
     .MenuList {
@@ -24,4 +24,125 @@
     }
 
 
+}
+
+/* [ON BIG SCREEN] */
+/* Wrapper */
+#hamnav {
+    width: 100%;
+    background: #000;
+    /* Optional */
+    position: sticky;
+    top: 0;
+}
+
+/* Hide Hamburger */
+#hamnav label, #hamburger { display: none; }
+
+/* Horizontal Menu Items */
+#hamitems { display: flex; }
+#hamitems a {
+    width: 20%; /* 100% / 5 tabs = 20% */
+    padding: 10px;
+    color: white;
+    text-decoration: none;
+    text-align: center;
+}
+#hamitems a:hover {
+    background: #401408;
+}
+
+
+
+/* MY STYLES */
+.Menu {
+    width: 100%;
+    background: #000;
+    /* Optional */
+    position: sticky;
+    top: 0;
+
+    .hamburgerLabel, .hamburgerCheker {
+        display: none;
+    }
+
+    .hamburgerItems {
+        display: flex;
+        a {
+            width: 20%; /* 100% / 5 tabs = 20% */
+            padding: 10px;
+            color: white;
+            text-decoration: none;
+            text-align: center;
+
+            &:hover {
+                background: #401408;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 768px){
+    /* Show Hamburger Icon */
+    .Menu {
+        .hamburgerLabel {
+            display: inline-block;
+            color: white;
+            background: #a02620;
+            font-style: normal;
+            font-size: 1.2em;
+            padding: 10px;
+        }
+
+        .hamburgerItems {
+            display: none;
+            a {
+                box-sizing: border-box;
+                display: block;
+                width: 100%;
+                border-top: 1px solid #333;
+            }
+        }
+
+        input:checked ~ .hamburgerItems { display: block; }
+    }
+
+    /* Break down menu items into vertical */
+    #hamitems a {
+        box-sizing: border-box;
+        display: block;
+        width: 100%;
+        border-top: 1px solid #333;
+    }
+
+    /* Toggle Show/Hide Menu */
+    #hamitems { display: none; }
+    #hamnav input:checked ~ #hamitems { display: block; }
+}
+
+
+
+/* [ON SMALL SCREENS] */
+@media screen and (max-width: 768px){
+    /* Show Hamburger Icon */
+    #hamnav label {
+        display: inline-block;
+        color: white;
+        background: #a02620;
+        font-style: normal;
+        font-size: 1.2em;
+        padding: 10px;
+    }
+
+    /* Break down menu items into vertical */
+    #hamitems a {
+        box-sizing: border-box;
+        display: block;
+        width: 100%;
+        border-top: 1px solid #333;
+    }
+
+    /* Toggle Show/Hide Menu */
+    #hamitems { display: none; }
+    #hamnav input:checked ~ #hamitems { display: block; }
 }
