--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -40,7 +40,6 @@
         padding: 0 20px;
 
 
-
         // new style
         .hamburgerLabel {
             display: inline-block;
@@ -48,9 +47,13 @@
             //background: #a02620;
             font-style: normal;
             font-size: 2.2em;
-            padding: 10px;
+            padding: 23px 0;
             position: relative;
             z-index: 1;
+
+            &:hover {
+                cursor: pointer;
+            }
 
 
             .icoHamburger {
@@ -58,17 +61,22 @@
             }
             .icoCross {
                 display: none;
-                font-size: 54px;
-                height: 46px;
+                //font-size: 54px;
+                //height: 46px;
+                svg {
+                    width: 26px;
+                    height: 27px;
+                }
             }
             span {
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
+                line-height: 100%;
             }
         }
 
-        // new style
+
         .hamburgerItems {
             padding: 0 20px 0 80px;
             margin: 0;
@@ -80,6 +88,12 @@
             z-index: 0;
             box-shadow: 0px 4px 28px rgba(0, 0, 0, 0.25);
             border-radius: 0 0 30px 0;
+
+            @media (min-width: 768px) {
+                box-shadow: none;
+                border-radius: 0;
+            }
+
             li {
                 text-decoration: none;
                 //text-align: center;
@@ -94,7 +108,7 @@
                     font-size: 18px;
                     font-weight: 600;
                     //line-height: 67px;
-                    padding: 30px 0;
+                    padding: 24px 0;
                     display: inline-block;
                     width: 100%;
                     &:link, &:visited {
