--- a/src/global.scss
+++ b/src/global.scss
@@ -402,7 +402,7 @@ button, a {
 .namePage {
     background-color: #eeeeee;
     .namePage__Container {
-        height: 100%;
+        min-height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -455,7 +455,7 @@ button, a {
 .guidePage {
     background-color: #eeeeee;
     .guidePage__Container {
-        height: 100%;
+        min-height: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -705,13 +705,15 @@ t
 .contactsPage {
     //background-color: #eeeeee;
     .contactsPage__Container {
-        height: 100%;
+        min-height: 100%;
         //display: flex;
         //flex-direction: column;
         //align-items: center;
         //justify-content: flex-start;
-        padding-bottom: 35px;
-        padding-top: 80px;
+        padding: $basePadTop 0 0;
+        //@media (min-width: 768px) {
+        //    margin-left: 8.3%;
+        //}
 
         @media (min-width: 992px) {
             @include container(1140px);
@@ -724,11 +726,19 @@ t
             font-size: 36px;
             line-height: 44px;
             font-weight: 800;
-            margin-bottom: 40px;
-            margin-left: 8.3%;
+            padding: 0 20px 40px;
+            background-color: #EEE;
+            margin-bottom: 0;
+            @media (min-width: 768px) {
+                margin-left: 8.3%;
+
+                padding: 0 0 40px;
+                background-color: transparent;
+            }
         }
         
         .mainContent {
+
             @media (min-width: 768px) {
                 display: flex;
                 flex-wrap: wrap;
@@ -736,13 +746,15 @@ t
             }
 
             .contacts {
-
+                padding: 20px 20px 0 ;
+                margin-bottom: 40px;
                 @media (min-width: 768px) {
                     width: 38%;
                     border: 3px solid #E2E2E2;
                     box-sizing: border-box;
                     border-radius: 27px;
                     padding: 50px 90px;
+                    margin-bottom: 0;
                 }
 
                 .authorDescript {
@@ -763,11 +775,15 @@ t
             }
             .questForm {
                 background-color: #EEE;
-
+                padding: 20px 20px 40px;
                 @media (min-width: 768px) {
                     width: 60%;
                     border-radius: 27px;
                     padding: 50px 80px 90px;
+                }
+
+                form {
+                    margin-bottom: 0;
                 }
 
                 .boldText {
@@ -801,9 +817,13 @@ t
                         font-size: 17px;
                         line-height: 22px;
                         border: none;
-
+                        margin-bottom: 12px;
                         @include placeholder {
                             color: #A9A9A9;
+                        }
+
+                        @media (min-width: 768px) {
+                            margin-bottom: 0;
                         }
 
                     }
