--- a/src/global.scss
+++ b/src/global.scss
@@ -191,6 +191,15 @@ button, a {
     }
 }
 
+a {
+    &:link, &:visited {
+        color: $base-color;
+    }
+    &:hover {
+        color: #eee;
+    }
+}
+
 .longString {
     word-break: break-all;
 }
@@ -721,20 +730,28 @@ t
 
 
         h1 {
-            //text-transform: uppercase;
+            font-size: 21px;
+            line-height: 26px;
             color: #474747;
-            font-size: 36px;
-            line-height: 44px;
             font-weight: 800;
-            padding: 0 20px 40px;
+            padding: 0 20px 36px;
             background-color: #EEE;
             margin-bottom: 0;
-            @media (min-width: 768px) {
-                margin-left: 8.3%;
 
+            @media (min-width: 768px) {
+                font-size: 36px;
+                line-height: 44px;
+                margin-left: 8.3%;
                 padding: 0 0 40px;
                 background-color: transparent;
+
+                br {
+                    display: none;
+
+                }
             }
+
+
         }
         
         .mainContent {
@@ -746,7 +763,7 @@ t
             }
 
             .contacts {
-                padding: 20px 20px 0 ;
+                padding: 34px 20px 0 ;
                 margin-bottom: 40px;
                 @media (min-width: 768px) {
                     width: 38%;
@@ -761,16 +778,24 @@ t
                     font-size: 15px;
                     line-height: 22px;
                     color: #999;
+                    margin-bottom: 12px;
                 }
                 .authorName {
                     color: #474747;
                     font-weight: 600;
                     font-size: 21px;
+                    margin-bottom: 24px;
                 }
                 .authorLinks {
                     font-weight: normal;
                     font-size: 18px;
                     line-height: 30px;
+                    margin-bottom: 12px;
+                }
+
+                hr {
+                    border: 1px solid #E0E0E0;
+                    margin: 30px 0;
                 }
             }
             .questForm {
@@ -806,6 +831,12 @@ t
                     @include placeholder {
                         color: #A9A9A9;
                     }
+                    width: 100%;
+                    max-width: 450px;
+                    @media (min-width: 768px) {
+                        width: auto;
+                        max-width: none;
+                    }
                 }
 
                 .flex {
@@ -818,17 +849,27 @@ t
                         line-height: 22px;
                         border: none;
                         margin-bottom: 12px;
+                        width: 100%;
+                        max-width: 340px;
                         @include placeholder {
                             color: #A9A9A9;
                         }
 
                         @media (min-width: 768px) {
                             margin-bottom: 0;
+                            width: auto;
+                            max-width: none;
                         }
 
                     }
                     .sendBtn {
                         @include baseColorBtn();
+                        width: 100%;
+                        max-width: 340px;
+                        @media (min-width: 768px) {
+                            width: auto;
+                            max-width: none;
+                        }
                     }
                 }
             }
