--- a/src/global.scss
+++ b/src/global.scss
@@ -523,17 +523,30 @@ a {
         }
 
         .resultShare {
-            margin-bottom: 40px;
-
+            margin-bottom: 20px;
+            text-align: center;
 
             &.resultShareWide {
-                margin: 0 -20px;
-                padding: 32px 0px 48px;
-                //text-align: center;
+                margin: 0 -20px 20px;
+                padding: 32px 20px 48px;
 
                 h3 {
                     max-width: 280px;
                     margin: 0 auto 16px;
+                    text-align: center;
+                }
+
+                &.resultCompare {
+                    h3 {
+                        max-width: 400px;
+                    }
+                    input {
+                        margin: 0 auto 16px;
+                    }
+                    .compareBtn {
+                        display: block;
+                        margin: 0 auto 16px;
+                    }
                 }
             }
 
